@@ -1,3 +1,11 @@
+2007-02-12  Hans Breuer  <hans@breuer.org>
+
+	* lib/libdia.def : added text_get_line_strlen
+	* makefile.msc : delete config.h on clean
+	
+	* plug-ins/python/pydia-property.c : allow to set sting properties 
+	with unicode 
+
 2007-02-10  Hans Breuer  <hans@breuer.org>
 
 	[ two more steps slowly fixing issues from bug #340352 ]
